src/components/TaskCard/TaskCard.scss
@import '../../styles/variables';
.taskWrapper {
  margin-bottom: 1rem;
  position: relative;
  z-index: 0; // New z-index stack created
}

.taskCard {
  position: relative;
  z-index: 10;
  border: 1px solid darken($color-gray, 5%);
  padding: 0.5rem 1rem 1rem;
  transition-property: opacity;
  transition-duration: 0.2s;
  background-color: white;
  cursor: grab;

  &:hover {
    border-color: darken($color-gray, 10%);
  }

  .priorityMarker {
    content: '';
    display: block;
    cursor: pointer;
    position: absolute;
    top: -1px;
    right: -1px;
    width: 1rem;
    height: 1rem;
    box-sizing: border-box;
    border-left: 0.5rem solid transparent;
    border-bottom: 0.5rem solid transparent;
  }
  h5 {
    font-weight: normal;
  }
  &.priority {
    &-1 .priorityMarker {
      border-top: 0.5rem solid $priority1;
      border-right: 0.5rem solid $priority1;
    }
    &-2 .priorityMarker {
      border-top: 0.5rem solid $priority2;
      border-right: 0.5rem solid $priority2;
    }
    &-3 .priorityMarker {
      border-top: 0.5rem solid $priority3;
      border-right: 0.5rem solid $priority3;
    }
    &-4 .priorityMarker {
      border-top: 0.5rem solid $priority4;
      border-right: 0.5rem solid $priority4;
    }
    &-5 .priorityMarker {
      border-top: 0.5rem solid $priority5;
      border-right: 0.5rem solid $priority5;
    }
  }
  h5 {
    margin: 0;
    margin-bottom: 8px;
    font-size: 1em;
  }
  p {
    margin: 0;
    &:last-child {
      margin-bottom: 0;
    }
  }
}

.taskName {
  display: inline-block;
  margin-bottom: 8px;
  word-break: break-all;
  word-break: break-word;
  @include link-reset;
  transition: $transition;

  &:hover {
    color: lighten($color-dark, 30%);
    transition: $transition;
  }
}

.taskNum {
  transition: $transition;

  &:hover {
    color: lighten($color-dark, 30%);
    transition: $transition;
  }
}

.taskMeta {
  font-size: 11px;
  color: gray;
  span {
    display: inline-block;
    &:first-child {
      margin-right: 4px;
    }
  }
}

.status {
  position: absolute;
  z-index: 1;
  cursor: pointer;
  bottom: -7px;
  left: -7px;
  background-color: $color-dark;
  color: white;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  svg {
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
  }
}

.inhold {
  background-color: $color-green;
}

.inprogress {
  background-color: $color-dark;
}

.progressBar {
  position: absolute;
  bottom: -1px;
  right: 48px;
  left: -1px;
  height: 2px;
  margin-top: 8px;
  background-color: $color-gray;
  & > div {
    height: 2px;
  }
}

.green {
  background-color: $color-green;
}

.red {
  background-color: $color-red;
}

svg.green {
  background-color: transparent;
  fill: $color-green;
}

svg.red {
  background-color: transparent;
  fill: $color-red;
}

.time {
  position: absolute;
  bottom: -8px;
  right: -8px;
  font-size: $font-size-small;
  line-height: $font-size-small + 2px;
  color: gray;
  background-color: white;
  border: 1px solid darken($color-gray, 10%);
  border-radius: 10px;
  z-index: 2;
  padding: 2px;
  transition: $transition;
  overflow: hidden;
  svg {
    vertical-align: top;
    width: 13px;
    height: 13px;
  }
  span {
    margin: 0 4px;
  }
}

.redBorder {
  border: 1px solid #d9534f69;
}

.bug {
  background-color: lighten($color-dark, 73%);
}

.header {
  display: inline-block;
  color: lighten($color-black, 40%);
  margin-bottom: 0.5rem;
  font-size: 11px;
}

.headerTaskType {
  margin-left: 3px;
}

.dropped {
  opacity: 0.3;
  transition-property: opacity;
  transition-duration: 0.2s;
}

.unassigned {
  color: lighten($color-black, 40%);
  border-bottom: 1px lighten($color-black, 40%) dashed;

  &:hover {
    color: lighten($color-dark, 30%);
    transition: $transition;
  }
}

.performer {
  cursor: pointer;
  transition: $transition;

  &:hover {
    color: lighten($color-dark, 30%);
    transition: $transition;

    .preformerEditIcon {
      opacity: 0.7;
      transition: $transition;
    }
  }

  .preformerEditIcon {
    opacity: 0;
    display: inline-block;
    line-height: 1;
    vertical-align: top;
    margin-left: 4px;
    transition: $transition;
  }
}

// Related tasks =>

.parentTask,
.subTask,
.linkedTask {
  position: relative;
  font-size: $font-size-small;
  background-color: $color-lightgray;
  padding: 0.5rem;
  white-space: nowrap;
  border: 1px solid darken($color-gray, 10%);
  transition: $transition;

  &:hover,
  &.lighted {
    background-color: darken($color-lightgray, 5%);
    transition: $transition;
  }
}

.subTask,
.linkedTask {
  margin-top: -1px;
}
.parentTask {
  margin-bottom: -1px;
}

.subTask {
  margin-left: 0.5rem;
}
.parentTask {
  margin-left: -0.5rem;
}

.shortNumber,
.relatedTaskIcon {
  display: inline-block;
  margin-right: 0.25rem;
}

.shortNumber {
  color: $color-dark-gray;

  &:hover {
    color: lighten($color-dark, 30%);
  }
}

.relatedTaskName {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.relatedTaskIcon {
  vertical-align: middle;
}

.lightedCard {
  background-color: black;
}
.subTasksButton {
  cursor: pointer;
  position: relative;
  font-size: $font-size-small;
  background-color: $color-lightgray;
  padding: 0.05rem;
  white-space: nowrap;
  border: 1px solid darken($color-gray, 10%);
  transition: $transition;
  margin-left: 0.5rem;
  border-top: 0;
  text-align: center;
}
.subTasksBlock {
  max-height: 0;
  transition: max-height 0.15s ease-out;
  overflow: hidden;
}
.subTasksShow {
  max-height: inherit;
  transition: max-height 0.25s ease-in;
}
.subTasksHide {
  height: 0;
}

$borderOffset: -0.25rem;

@keyframes lightedBorderRise {
  from {
    transform: scale(1.2, 1.3);
    opacity: 0;
  }
  to {
    transform: scale(1, 1);
    opacity: 1;
  }
}

.lightedBorder {
  animation: lightedBorderRise 0.2s ease-out 0s;
  border: 0.25rem solid rgba(black, 0.1);
  position: absolute;
  z-index: 1;
  top: $borderOffset;
  bottom: $borderOffset;
  left: $borderOffset;
  right: $borderOffset;
}

// <= Related tasks

